kubernetes/shelfmark/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shelfmark
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: shelfmark
  template:
    metadata:
      labels:
        app: shelfmark
    spec:
      containers:
      - name: shelfmark
        image: ghcr.io/calibrain/shelfmark:v1.4.0@sha256:4ef757349c3c7a7d90ba95b1e2a46ce4dd460a4776efbcf2aa1b1c476e7d5de5
        ports:
        - containerPort: 8084
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /books
          name: grimmory-ingest
        - mountPath: /downloads
          name: downloads
        - mountPath: /audiobooks
          name: audiobooks
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: shelfmark-config
      - name: grimmory-ingest
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads/grimmory-ingestion
      - name: downloads
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
      - name: audiobooks
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/audiobookshelf
