kubernetes/shelfmark/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shelfmark
  annotations:
    ak-type: oidc
    ak-oidc-callback: /api/auth/oidc/callback
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Shelfmark
    gethomepage.dev/description: Book Search
    gethomepage.dev/group: Media Automation
    gethomepage.dev/icon: mdi-book-search
    gethomepage.dev/pod-selector: app=shelfmark

spec:
  tls:
  - hosts:
    - shelfmark.k.oneill.net
    secretName: shelfmark-tls
  rules:
  - host: shelfmark.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shelfmark
            port:
              number: 8084
